Added new debug panel for clicks.

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Performance]
-Pos=616,21
+Pos=618,5
 Size=176,106
 Collapsed=0
 
 [Window][ImGui Demo]
 Pos=18,46
 Size=402,82
+Collapsed=0
+
+[Window][Click Log]
+Pos=558,43
+Size=184,82
 Collapsed=0
 
